# Loiacono

./: .gitmodules  CMakeLists.txt  api_server.cpp  api_server.h  audio_device_labels.cpp  audio_device_labels.h  build_asan.sh  build_qt.sh  gl_spectrogram_canvas.cpp  gl_spectrogram_canvas.h  loiacono_gpu.py  loiacono_gpu_compute.cpp  loiacono_gpu_compute.h  loiacono_gpu_rolling_compute.cpp  loiacono_gpu_rolling_compute.h  loiacono_parallel.cpp  loiacono_parallel.h  loiacono_rolling.cpp  loiacono_rolling.h  loiacono_vulkan_compute.cpp  loiacono_vulkan_compute.h  main.cpp  spectrogram_widget.cpp  spectrogram_widget.h  tone_curve_editor.cpp  tone_curve_editor.h
qt/: CMakeLists.txt  api_server.cpp  api_server.h  gl_spectrogram_canvas.cpp  gl_spectrogram_canvas.h  loiacono_parallel.h  loiacono_rolling.cpp  loiacono_rolling.h  main.cpp  spectrogram_widget.cpp  spectrogram_widget.h
shaders/: fft_generic.comp.template  goertzel_generic.comp.template  loiacono_generic.comp  loiacono_generic.comp.template
tests/: debug_buffer_issue.py  test_audio_device_labels.cpp  test_consistency.py  test_cpp_consistency.cpp  test_cpu_consistency  test_cpu_consistency.cpp  test_display_consistency.cpp  test_list_audio_devices.cpp  test_modes_headless.cpp  test_pitch_tuning_headless.cpp  test_simple_consistency.cpp
webgpu/: index.html  loiacono.wgsl  main.js  spectrogram.wgsl  style.css
